k8s/applications/business/bulwark/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bulwark
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
