k8s/applications/business/bulwark/service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: bulwark
  namespace: bulwark
spec:
  selector:
    app.kubernetes.io/name: bulwark
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bulwark
  namespace: bulwark
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - webmail.smadja.dev
  rules:
    - backendRefs:
        - name: bulwark
          port: 80
