k8s/applications/business/bulwark/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bulwark-gateway-ingress
  namespace: bulwark
  labels:
    policy-type: web-audit
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bulwark
  description: "Allow Gateway ingress to Bulwark HTTP"
  ingress:
    - fromEntities:
        - host
        - remote-node
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
